Add Health Checks.

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "SQLDBConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=TestDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "PostgreSQLConnectionString": ""
   },
   "AllowedHosts": "*",
+  "ApiResourceBaseUrls": {
+    "AuthServer": "https://localhost:5000",
+    "SampleApi": "https://localhost:4500"
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
@@ -20,5 +21,24 @@
         "Limit": 2
       }
     ]
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "HTTP-Api-Basic",
+        "Uri": "https://localhost:44392/selfcheck"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60,
+    "HealthCheckDatabaseConnectionString": "Data Source=Infrastructure\\HealthChecks\\Db\\healthchecksdb"
   }
 }
