Add authentication server connect and api connect.

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -4,6 +4,10 @@
     "PostgreSQLConnectionString": ""
   },
   "AllowedHosts": "*",
+  "Self": {
+    "Id": "webapi.template",
+    "Secret": "0a2e472b-f263-43fd-8372-3b13f5acf222"
+  },
   "ApiResourceBaseUrls": {
     "AuthServer": "https://localhost:5000",
     "SampleApi": "https://localhost:4500"
