--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -12,6 +12,14 @@
     "AuthServer": "https://localhost:5000",
     "SampleApi": "https://localhost:4500"
   },
+  "HttpClientPolicies": {
+    "RetryCount": 3,
+    "RetryDelayInMs": 500,
+    "RetryTimeoutInSeconds": 5,
+    "BreakDurationInSeconds": 30,
+    "MaxAttemptBeforeBreak": 3,
+    "HandlerTimeoutInMinutes": 5
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
